--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -2807,7 +2807,7 @@
     }
    ],
    "source": [
-    "# look at the States in rdata as DataFrame \n",
+    "# look at the Residuals in rdata as DataFrame \n",
     "amici.getResidualsAsDataFrame(model, [edata], [rdata])"
    ]
   },
